# doctest

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .travis.yml  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HISTORY.md  LICENSE  LICENSE.txt  MODULE.bazel  README.md  TODO.md  TODO.txt  appveyor.yml  c.bat  conanfile.py  crap.h  doctest.cpp  doctest.h  doctest.pc.in  doctest_impl.h  issue_template.md  main.cpp  meson.build  pull_request_template.md  test.cpp  test_appveyor.cpp
.github/: FUNDING.yml  (+2 more)
doctest/: BUILD.bazel  doctest.cpp  doctest.h  doctest_impl.h
doctest/extensions/: doctest_mpi.h  doctest_util.h  mpi_reporter.h  mpi_sub_comm.h
doctest/parts/: compiler.h  doctest.cpp  doctest_ext.h  doctest_fast.h  doctest_fwd.h  doctest_impl.h  feature_detection.h  version.h  warnings.h
doctest/parts/private/: atomic.h  color.cpp  context.cpp  context_scope.cpp  context_scope.h  context_state.cpp  context_state.h  debugger.cpp  doctest.cpp  exception_translator.cpp  exception_translator.h  exceptions.cpp  exceptions.h  filters.cpp  filters.h  main.cpp  path.cpp  prelude.h  reporter.cpp  reporter.h  reporters.cpp  signals.cpp  signals.h  string.cpp  subcase.cpp  test_case.cpp  test_case.h  test_suite.cpp  timer.cpp  timer.h  traversal.cpp  traversal.h  xml.cpp  xml.h
doctest/parts/public/: color.h  compiler.h  config.h  context.h  context_scope.h  debugger.h  decorators.h  exception_translator.h  exceptions.h  generator.h  macros.h  path.h  platform.h  reporter.h  string.h  subcase.h  test_case.h  test_suite.h  utility.h  version.h  warnings.h
examples/all_features/: CMakeLists.txt  alternative_macros.cpp  assert_returns_disabled.cpp  assert_returns_disabled_evaluate.cpp  assertion_macros.cpp  asserts_used_outside_of_tests.cpp  bitfield_packed_struct.cpp  bitfields.cpp  check_doctest_string.cpp  concurrency.cpp  coverage_maxout.cpp  decomposition.cpp  doctest_proxy.h  double_stringification.cpp  enums.cpp  fatal_subcase_unwind.cpp  generators.cpp  header.h  header_with_tests.h  logging.cpp  main.cpp  no_failures.cpp  reporters_and_listeners.cpp  run_fatal_subcase_unwind_test.cmake  stringification.cpp  subcases.cpp  templated_test_cases.cpp  test_cases_and_suites.cpp  test_suites.cpp  treat_char_star_as_string.cpp
examples/all_features/test_output/: abort_after.txt  abort_after_junit.txt  abort_after_xml.txt  all_binary.txt  all_binary_junit.txt  all_binary_xml.txt  all_features.alternative_macros.cpp.txt  all_features.assertion_macros.cpp.txt  all_features.coverage_maxout.cpp.txt  all_features.doctest_proxy.h.txt  all_features.main.cpp.txt  all_features.stringification.cpp.txt  all_features.subcases.cpp.txt  alternative_macros.cpp.txt  alternative_macros.cpp_junit.txt  alternative_macros.cpp_xml.txt  assertion_macros.cpp.txt  assertion_macros.cpp_junit.txt  assertion_macros.cpp_xml.txt  asserts_used_outside_of_tests.cpp.txt  asserts_used_outside_of_tests.cpp_junit.txt  asserts_used_outside_of_tests.cpp_xml.txt  check_doctest_string.cpp_junit.txt  check_doctest_string.cpp_xml.txt  count.txt  count_xml.txt  coverage_maxout.cpp.txt  coverage_maxout.cpp_junit.txt  coverage_maxout.cpp_xml.txt  decomposition.cpp.txt  decomposition.cpp_junit.txt  decomposition.cpp_xml.txt  doctest_proxy.h.txt  doctest_proxy.h_junit.txt  doctest_proxy.h_xml.txt  double_stringification.cpp.txt  double_stringification.cpp_junit.txt  double_stringification.cpp_xml.txt  enums.cpp.txt  enums.cpp_junit.txt  (+79 more)
examples/alternative_header_inclusion/: CMakeLists.txt  file.cpp  main.cpp
examples/assertion_macros/: CMakeLists.txt  main.cpp
examples/code_coverage/: CMakeLists.txt  main.cpp  test.cpp
examples/combining_the_same_tests_built_differently_in_multiple_shared_objects/: CMakeLists.txt  default.cpp  foo.h  main.cpp  return42.cpp  test_runner.cpp
examples/dev_testing/: CMakeLists.txt  exceptions.cpp  main.cpp  test.cpp
examples/disabled/: CMakeLists.txt  README.md  main.cpp  test.cpp
examples/dll_and_executable/: CMakeLists.txt  common.h  dll.cpp  implementation.cpp  implementation_2.cpp  main.cpp  plugin.cpp
examples/dll_installed_doctest/: CMakeLists.txt  dll.cpp  dll.h  exporting.h  main.cpp
examples/exe_with_static_libs/: BUILD.bazel  CMakeLists.txt  doctest_force_link_static_lib_in_target.cmake  lib_1_src1.cpp  lib_1_src2.cpp  lib_2_src.cpp  main.cpp
examples/executable_dll_and_plugin/: CMakeLists.txt  dll.cpp  implementation.cpp  implementation_2.cpp  main.cpp  plugin.cpp
examples/hello_world/: CMakeLists.txt  README.md  c.bat  main.cpp
examples/how_subcases_work/: CMakeLists.txt  main.cpp
examples/mpi/: CMakeLists.txt  main.cpp  main_config.cpp  main_default.cpp  mpi.cpp  mpi_test.h
examples/multi_dll/: CMakeLists.txt  common.h  dll.cpp  main.cpp
examples/multiprocess/: CMakeLists.txt  README.md  main.cpp  run.py
examples/range_based_execution/: CMakeLists.txt  main.cpp  run.py
examples/removing_doctest_options/: CMakeLists.txt  main.cpp
examples/stress_test/: CMakeLists.txt  main.cpp  readme.txt  stress.inl
examples/stringification/: CMakeLists.txt  main.cpp
examples/trololo/: CMakeLists.txt  in.h  main.cpp  test.cpp
examples/type_reporting/: CMakeLists.txt  main.cpp
scripts/code_coverage_source/: CMakeLists.txt  main.cpp  test.cpp
scripts/linker_stress_test/: CMakeLists.txt  main.cpp  readme.txt  stress.inl  test.cpp
scripts/playground/: CMakeLists.txt  main.cpp  test.cpp
tests/: CMakeLists.txt  main.cpp
tests/common/: CMakeLists.txt
tests/doctest/: test_color.ansi.cpp  test_color.none.cpp  test_color.win32.cpp  test_debugger.cpp  test_exception_translator.cpp  test_filters.cpp  test_path.cpp  test_platform.cpp  test_string.cpp  test_traversal.cpp  test_xml.cpp
tests/integration/: test_assert_out_of_test_context.cpp  test_bdd.cpp  test_capture.cpp  test_info.cpp  test_message.cpp
tests/regression/: test.630.cpp  test.651.cpp  test.665.cpp  test.782.cpp  test.786.cpp  test.873.cpp  test.915.cpp
(+320 files in other folders)
